plugins {
    id 'java-library'
}

group = 'io.github.limehee.samples'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform('org.springframework.boot:spring-boot-dependencies:4.0.2')
    testImplementation platform('org.springframework.boot:spring-boot-dependencies:4.0.2')

    api 'io.github.limehee:hookrouter-core:0.1.0'
    implementation 'io.github.limehee:hookrouter-spring:0.1.0'

    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'com.slack.api:slack-api-model:1.46.0'
    implementation 'com.slack.api:slack-api-client:1.46.0'
    implementation 'com.slack.api:slack-app-backend:1.46.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
